VirtualMachine/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]"
        },
        "virtual_machine_name": {
            "type": "string"
            
        },
        "virtual_machine_size": {
            "type": "string"
            
        },
        "adminUser": {
            "type": "string"
            
        },
        "adminPassword": {
            "type": "string"
            
        }
    },
    "functions": [],
    "variables": {
        "storage_account_name": "ARMStorageaccount122024",
        "tags": {
            "project": "AADHYA INTERIOR",
            "environment": "Dev"
        },
        "public_ip_name": "arm-publicip",
        "nsg_name": "arm-nsg",
        "vnet_name": "arm-vnet",
        "snet_name": "arm-snet",
        "nic_name": "arm-nic"
    },
    "resources": [
        {
            "name": "[toLower(variables('storage_account_name'))]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2023-01-01",
            "location": "[parameters('Location')]",
            "tags": "[variables('tags')]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "StorageV2"
        },
        {
            "name": "[variables('public_ip_name')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2023-04-01",
            "location": "[parameters('Location')]",
            "tags": "[variables('tags')]",
            "properties": {
                "publicIPAllocationMethod": "Static"
                
            }
        },
        {
            "name": "[variables('nsg_name')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2023-04-01",
            "location": "[parameters('Location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "RDP",
                        "properties": {
                            "description": "RDP_Allow",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "description": "HTTP_Allow",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    }

                ]
            }
        },
        {
            "name": "[variables('vnet_name')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2023-04-01",
            "location": "[parameters('Location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('snet_name')]",
                        "properties": {
                            "addressPrefix": "10.0.0.0/25",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('nic_name')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2023-04-01",
            "location": "[parameters('Location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnet_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('public_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnet_name'), variables('snet_name'))]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('virtual_machine_name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2023-03-01",
            "location": "[parameters('Location')]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', toLower(variables('storage_account_name')))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('nic_name'))]"
            ],
            "tags": "[variables('tags')]",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('virtual_machine_size')]"
                },
                "osProfile": {
                    "computerName": "[parameters('virtual_machine_name')]",
                    "adminUsername": "[parameters('adminUser')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[concat(parameters('virtual_machine_name'), '-', 'osdisk')]",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    } 
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nic_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', toLower(variables('storage_account_name')))).primaryEndpoints.blob]"
                    }
                }
            }
        }
    ],
    "outputs": {}
}
